--- a/_layout/test.html
+++ b/_layout/test.html
@@ -1,4 +1,4 @@
-<head>
+<!--<head>
     <meta charset="utf-8">
     <meta name="keywords" value="" />
     <meta name="description" value="" />
@@ -17,4 +17,4 @@
   </head>
 <body>
   {{content}}
-</body>
+</body>-->
