added netlify in forms2

--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,7 +1,7 @@
 {% if page.id == "pt" %}
 <div class="col-md-3 col-xs-12">
     <div class="formulario-contacto">
-        <form method="POST" action="https://formspree.io/websites_forms@yarilabs.com" netlify>
+        <form method="POST" action="thank-you" netlify>
             <table>
                 <tr>
                 <td >
@@ -43,7 +43,7 @@
 {% elsif page.id == "fr" %}
 <div class="col-md-3 col-xs-12">
         <div class="formulario-contacto">
-            <form method="POST" action="https://formspree.io/websites_forms@yarilabs.com" netlify>
+            <form method="POST" action="thank-you" netlify>
                 <table>
                     <tr>
                     <td >
@@ -84,7 +84,7 @@
 {% elsif page.id == "en" %}
 <div class="col-md-3 col-xs-12">
     <div class="formulario-contacto">
-        <form method="POST" action="https://formspree.io/websites_forms@yarilabs.com" netlify>
+        <form method="POST" action="thank-you" netlify>
             <table>
                 <tr>
                 <td >
