--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,4 +1,4 @@
-{% if page.id == "pt" %}
+<!--{% if page.id == "pt" %}
 <div class="newsletter">
     <form method="POST" action="Obrigado" netlify>
         <div  class="position-relative">
@@ -67,4 +67,4 @@
         <span>Thank you! You will receive our newsletter.</span>
     </script>
 </div>
-{% endif %}
+{% endif %}-->
