--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,6 +1,6 @@
 {% if page.id == "pt" %}
 <div class="newsletter">
-    <form method="POST" action="Obrigado" netlify>
+    <form method="POST" action="Obrigado" name="newsletters" netlify>
         <div  class="position-relative">
             <span>Subscreva a nossa newsletter</span>
             <input type="text" name="Newsletter" placeholder="email" value="" required>
@@ -23,7 +23,7 @@
 
 {% elsif page.id == "fr" %}
 <div class="newsletter">
-    <form method="POST" action="Merci" netlify>
+    <form method="POST" action="Merci" name="newsletters" netlify>
         <div  class="position-relative">
             <span>Abonnez-vous à notre newsletter</span>
             <input type="text" name="Newsletter" placeholder="email" value="" required>
@@ -47,7 +47,7 @@
 
 {% elsif page.id == "en" %}
 <div class="newsletter">
-    <form method="POST" action="thank-you" netlify>
+    <form method="POST" action="thank-you" name="newsletters" netlify>
         <div  class="position-relative">
             <span>Subscribe to our newsletter</span>
             <input type="text" name="Newsletter" placeholder="email" value="" required>
